--- a/templates/base.html
+++ b/templates/base.html
@@ -18,12 +18,38 @@
 
 <body>
     <div class="container-fluid p-0">
+        <!-- Navbar Header -->
+        <div class="row justify-content-end bg-light g-0">
+            <!-- Brand -->
+            <div class="col-4 text-center">
+                <a href="#" id="logo" class="text-decoration-none text-dark fs-1">Tone Henge</a>
+            </div>
+
+            <div class="d-flex col-4 align-items-center justify-content-end">
+                <!-- Account Dropdown -->
+                <div class="dropdown">
+                    <div class="btn me-4 text-center mt-2" id="account-dropdown" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <i class="fas fa-user-circle fs-3"></i>
+                        <span class="d-block">Account</span>
+                    </div>
+                    <ul class="dropdown-menu" aria-labelledby="account-dropdown">
+                        <li><a class="dropdown-item" href="#">Log In</a></li>
+                        <li><a class="dropdown-item" href="#">Sign Up</a></li>
+                    </ul>
+                </div>
+
+                <!-- Basket -->
+                <div class="me-3 text-center mt-2">
+                    <i class="fas fa-shopping-basket fs-3"></i>
+                    <span class="d-block">£0.00</span>
+                </div>
+            </div>
+        </div>
+
         <!-- Navbar Component -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <!-- Brand/Logo -->
-                <a class="navbar-brand" href="#">Tone Henge</a>
-
                 <!-- Nav Toggle -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-collapse"
                     aria-expanded="false" aria-label="Toggle navigation">
