Fix responsiveness for navbar header

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,9 @@
 <body>
     <div class="container-fluid p-0">
         <!-- Navbar Header -->
-        <div class="row justify-content-end bg-light g-0">
+        <div class="row justify-content-between justify-content-sm-end bg-light g-0">
             <!-- Brand -->
-            <div class="col-4 text-center">
+            <div class="col-4 text-center mt-2 ms-1">
                 <a href="#" id="logo" class="text-decoration-none text-dark fs-1">Tone Henge</a>
             </div>
 
@@ -30,7 +30,7 @@
                 <div class="dropdown">
                     <div class="btn me-4 text-center mt-2" id="account-dropdown" data-bs-toggle="dropdown"
                         aria-expanded="false">
-                        <i class="fas fa-user-circle fs-3"></i>
+                        <i class="fas fa-user-circle fs-4"></i>
                         <span class="d-block">Account</span>
                     </div>
                     <ul class="dropdown-menu" aria-labelledby="account-dropdown">
@@ -41,7 +41,7 @@
 
                 <!-- Basket -->
                 <div class="me-3 text-center mt-2">
-                    <i class="fas fa-shopping-basket fs-3"></i>
+                    <i class="fas fa-shopping-basket fs-4"></i>
                     <span class="d-block">£0.00</span>
                 </div>
             </div>
