Implement basic footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -101,6 +101,20 @@
         </nav>
 
         {% block content %} {% endblock content %}
+
+        <!-- Footer -->
+        <footer class="fixed-bottom bg-light text-center">
+            <ul id="ftr-socials" class="list-inline fs-2">
+                <li class="list-inline-item"><a href=""><i class="fab fa-facebook-f text-dark"></i></a></li>
+                <li class="list-inline-item"><a href=""><i class="fab fa-instagram text-dark"></i></a></li>
+                <li class="list-inline-item"><a href=""><i class="fab fa-twitter text-dark"></i></a></li>
+            </ul>
+            <ul class="list-inline">
+                <li class="list-inline-item">Contact Us |</li>
+                <li class="list-inline-item">Address Placeholder |</li>
+                <li class="list-inline-item">&copy;Tone Henge</li>
+            </ul>
+        </footer>
     </div>
 
     <!-- JavaScript Files -->
