Add epic to home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% for i in iter %}
-<h1>test content</h1>
-{% endfor %}
+<div class="epic-cont"></div>
 {% endblock content %}
