Add call to action to home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="epic-cont"></div>
+<div class="epic-cont d-flex align-items-center justify-content-center">
+    <a href="#" type="button" class="btn btn-light fs-1 hvr-float">Shop Now</a>
+</div>
 {% endblock content %}
