--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,9 +18,36 @@ footer {
     height: 100px;
 }
 
+/* Float - Credit to Ian Lunn / Hover.CSS */
+.hvr-float {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+
+.hvr-float:hover,
+.hvr-float:focus,
+.hvr-float:active {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+}
+
 /* Home */
 .epic-cont {
     height: 80vh;
     background: url('/static/images/home.jpg') no-repeat center center fixed;
     background-size: cover;
+}
+
+.epic-cont a {
+    margin-bottom: 200px;
+    opacity: 0.8;
 }
