Link up home page anchor tags & override Bootstrap menu item focus behaviour

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div class="epic-cont d-flex align-items-center justify-content-center">
-    <a href="#" type="button" class="btn btn-light fs-1 hvr-float">Shop Now</a>
+    <a href="#" type="button" class="btn btn-dark fs-1 hvr-float">Shop Now</a>
 </div>
 {% endblock content %}
