--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         <div class="row justify-content-between justify-content-sm-end bg-red g-0">
             <!-- Brand -->
             <div class="col-4 text-center mt-2 ms-1">
-                <a href="#" id="logo" class="text-decoration-none text-dark fs-1">Tone Henge</a>
+                <a href="{% url 'home' %}" id="logo" class="text-decoration-none text-dark fs-1">Tone Henge</a>
             </div>
 
             <div class="d-flex col-4 align-items-center justify-content-end">
@@ -64,7 +64,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <!-- Home -->
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
 
                         <!-- Guitars Dropdown -->
