Create test products view and link up products view to navbar in base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,11 @@
                             <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
 
+                        <!-- All Products -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'products' %}">All Products</a>
+                        </li>
+
                         <!-- Guitars Dropdown -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="guitars-dropdown" role="button"
