Fix overflowing footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,11 @@
             </div>
         </nav>
 
-        {% block content %} {% endblock content %}
+        <!-- Page Content -->
+        <div class="content-container">
+            {% block content %}
+            {% endblock content %}
+        </div>
 
         <!-- Footer -->
         <footer class="fixed-bottom bg-red text-center">
