Move content container div to be specified in specific template, rather than base.html

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,24 +1,26 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="row g-0 m-3">
-    {% for product in products %}
-    <!-- Product Preview Card Element -->
-    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 justify-content-center d-flex p-1">
-        <div class="card" style="width: 18rem;">
-            <img src="{{ product.image.url }}" class="card-img-top" alt="product preview">
-            <div class="card-body">
-                <div class="d-flex justify-content-between">
-                    <h5 class="card-title">{{ product.name }}</h5>
-                    <span class="align-bottom">£{{ product.price }}</span>
+<div class="content-container">
+    <div class="row g-0 m-3">
+        {% for product in products %}
+        <!-- Product Preview Card Element -->
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 justify-content-center d-flex p-1">
+            <div class="card" style="width: 18rem;">
+                <img src="{{ product.image.url }}" class="card-img-top" alt="product preview">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                        <h5 class="card-title">{{ product.name }}</h5>
+                        <span class="align-bottom">£{{ product.price }}</span>
+                    </div>
+                    <span class="fst-italic fw-light">{{ product.category }}</span>
+                    <hr>
+                    <p class="card-text">{{ product.content }}</p>
+                    <a href="#" class="btn bg-red btn-outline-dark w-100 border-0 text-white">Details</a>
                 </div>
-                <span class="fst-italic fw-light">{{ product.category }}</span>
-                <hr>
-                <p class="card-text">{{ product.content }}</p>
-                <a href="#" class="btn bg-red btn-outline-dark w-100 border-0 text-white">Details</a>
             </div>
         </div>
+        {% endfor %}
     </div>
-    {% endfor %}
 </div>
 {% endblock content %}
