Restyle product card component

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,3 +59,9 @@ footer {
     margin-bottom: 200px;
     opacity: 0.9;
 }
+
+/* Products */
+.preview-img {
+    height: 280px;
+    object-fit: cover;
+}
