--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -6,7 +6,7 @@
         {% for product in products %}
         <!-- Product Preview Card Element -->
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 justify-content-center d-flex p-1">
-            <div class="card" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
                 <img src="{{ product.image.url }}" class="card-img-top preview-img" alt="product preview">
                 <div class="card-body">
                     <div class="d-flex justify-content-between">
