--- a/templates/base.html
+++ b/templates/base.html
@@ -124,8 +124,8 @@
                 </li>
             </ul>
             <ul class="list-inline text-white">
-                <li class="list-inline-item">Contact Us |</li>
-                <li class="list-inline-item">Address Placeholder |</li>
+                <li class="list-inline-item"><a href="#" class="text-decoration-none text-white">Contact Us</a> |</li>
+                <li class="list-inline-item">TH, Henge Road, TH3 7GF |</li>
                 <li class="list-inline-item">&copy;Tone Henge</li>
             </ul>
         </footer>
