--- a/products/templates/products/product_view.html
+++ b/products/templates/products/product_view.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row content-container justify-content-center g-0 mt-5">
     <!-- Image -->
-    <div class="col-12 col-md-8 col-lg-4 d-flex justify-content-center m-2">
+    <div class="col-12 col-md-8 col-lg-4 d-flex justify-content-center m-2 me-md-3">
         <img src="{{ product.image.url }}" alt="product image" class="img-fluid p-2 product-img">
     </div>
 
