Style 'add to basket' button & link up login/signup tags

--- a/products/templates/products/product_view.html
+++ b/products/templates/products/product_view.html
@@ -13,7 +13,7 @@
         <span class="d-block fs-3 fst-italic">£{{ product.price }}</span>
         <span class="d-block mt-3 text-start fw-bold">Description:</span>
         <p class="text-start">{{ product.content }}</p>
-        <button type="button" class="btn btn-success">Add to Basket</button>
+        <button type="button" class="btn bg-red btn-outline-dark border-0">Add to Basket</button>
     </div>
 </div>
 {% endblock content %}
