--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,8 @@
                         <span class="d-block">Account</span>
                     </div>
                     <ul class="dropdown-menu" aria-labelledby="account-dropdown">
-                        <li><a class="dropdown-item" href="#">Log In</a></li>
-                        <li><a class="dropdown-item" href="#">Sign Up</a></li>
+                        <li><a class="dropdown-item" href="{% url 'account_login' %}">Log In</a></li>
+                        <li><a class="dropdown-item" href="{% url 'account_signup' %}">Sign Up</a></li>
                     </ul>
                 </div>
 
