--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,12 @@
                         <span class="d-block">Account</span>
                     </div>
                     <ul class="dropdown-menu" aria-labelledby="account-dropdown">
+                        {% if request.user.is_authenticated %}
+                        <li><a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a></li>
+                        {% else %}
                         <li><a class="dropdown-item" href="{% url 'account_login' %}">Log In</a></li>
                         <li><a class="dropdown-item" href="{% url 'account_signup' %}">Sign Up</a></li>
+                        {% endif %}
                     </ul>
                 </div>
 
