--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<div class="row justify-content-center g-0 mt-3">
+<div class="row justify-content-center g-0 mt-3 content-container">
     <div class="col-11 col-md-6 col-lg-4">
         <!-- Title -->
         <h1>{% trans "Sign In" %}</h1>
@@ -22,7 +22,7 @@
             {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
             {% endif %}
-            <div class="text-center">
+            <div class="text-center mb-3">
                 <button class="bg-red btn btn-outline-dark border-0" type="submit">{% trans "Sign In" %}</button>
             </div>
         </form>
