--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="row justify-content-center">
+<div class="row justify-content-center content-container">
     <div class="col text-center">
         <h1>{% trans "Sign Out" %}</h1>
 
@@ -16,7 +16,7 @@
             {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
             {% endif %}
-            <button class="btn btn-danger" type="submit">{% trans 'Sign Out' %}</button>
+            <button class="btn btn-danger mb-3" type="submit">{% trans 'Sign Out' %}</button>
         </form>
     </div>
 </div>
