--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<div class="row justify-content-center mt-3">
+<div class="row justify-content-center mt-3 content-container">
     <div class="col-11 col-md-6 col-lg-4">
         <h1>{% trans "Sign Up" %}</h1>
 
@@ -18,7 +18,7 @@
             {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
             {% endif %}
-            <div class="text-center">
+            <div class="text-center mb-3">
                 <button class="btn btn-outline-dark bg-red border-0" type="submit">{% trans "Sign Up" %}
                 </button>
             </div>
