--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="row justify-content-center content-container">
+<div class="row justify-content-center content-container g-0">
     <div class="col text-center">
         <h1>{% trans "Sign Out" %}</h1>
 
