--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<div class="row justify-content-center mt-3 content-container">
+<div class="row justify-content-center mt-3 content-container g-0">
     <div class="col-11 col-md-6 col-lg-4">
         <h1>{% trans "Sign Up" %}</h1>
 
