--- a/templates/base.html
+++ b/templates/base.html
@@ -102,8 +102,9 @@
                     </ul>
 
                     <!-- Search -->
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <form method="GET" action="{% url 'products' %}" class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                            name="q">
                         <button class="btn btn-outline-light" type="submit">Search</button>
                     </form>
                 </div>
