--- a/products/templates/products/product_view.html
+++ b/products/templates/products/product_view.html
@@ -19,21 +19,22 @@
         <!-- User Input Component -->
         <div class="row g-0 justify-content-center">
             <div class="col-10 col-md">
-                <form action="" method="POST">
+                <form action="{% url 'add_to_basket' product.id %}" method="POST">
+                    {% csrf_token %}
                     <div class="row justify-content-center">
                         <div class="col-10 col-md text-md-end">
                             <label class="col-form-label" for="qty_input_{{ product.id }}">Quantity:</label>
                         </div>
                         <div class="col-10 col-md">
                             <input name="quantity" type="number" class="form-control" value="1" min="1" max="99"
-                                id="qty_input_{{ product.id }}" data-product-id="{{ product.id }}">
+                                id="qty_input_{{ product.id }}">
                         </div>
+                        <div class="col-10 col-md mt-2 mt-md-0">
+                            <input type="submit" class="btn bg-red btn-outline-dark border-0" value="Add to Basket">
+                        </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
                 </form>
-            </div>
-
-            <div class="col-10 col-md mt-2 mt-md-0">
-                <button type="button" class="btn bg-red btn-outline-dark border-0">Add to Basket</button>
             </div>
         </div>
     </div>
