--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -1,5 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{{ basket_items }}
+<div class="content-container">
+
+    <!-- Header -->
+    <div class="row mt-2 g-0">
+        <div class="col text-center">
+            <h1 class="fs-2">Your Basket: £{{ total }}</h1>
+        </div>
+    </div>
+
+    <div class="row g-0 justify-content-center">
+        <div class="col-10">
+            <!-- Basket Items -->
+            {% if basket_items %}
+            <div class="table">
+                test render
+            </div>
+
+            <!-- Continue Shopping Prompt -->
+            {% else %}
+            <div class="alert alert-dark mt-2" role="alert">
+                <span class="fs-5">Your basket is empty.</span>
+                <div class="justify-content-end d-flex mt-2">
+                    <a href="/products/" class="btn bg-red btn-outline-dark border-0 text-white d-block">Continue
+                        Shopping</a>
+                </div>
+            </div>
+            {% endif %}
+        </div>
+    </div>
+</div>
 {% endblock content %}
