Correct link in basket.html

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -23,7 +23,8 @@
             <div class="alert alert-dark mt-2" role="alert">
                 <span class="fs-5">Your basket is empty.</span>
                 <div class="justify-content-end d-flex mt-2">
-                    <a href="/products/" class="btn bg-red btn-outline-dark border-0 text-white d-block">Continue
+                    <a href="{% url 'products' %}"
+                        class="btn bg-red btn-outline-dark border-0 text-white d-block">Continue
                         Shopping</a>
                 </div>
             </div>
