--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,3 +75,10 @@ footer {
 .border-gry {
     border: 1px solid rgba(0, 0, 0, .125);
 }
+
+
+/* Basket */
+
+.basket-img {
+    max-height: 125px;
+}
