--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -36,11 +36,12 @@
 
                         <td class="text-center">
                             <!-- Update Quantity -->
-                            <form action="" method="POST" class="form text-center d-inline">
+                            <form action="{% url 'adjust_quantity' item.product.id %}" method="POST"
+                                class="form text-center d-inline">
                                 {% csrf_token %}
                                 <input name="quantity" type="number" class="form-control" value="{{ item.quantity }}"
                                     min="1" max="99">
-                                <button type="button" class="btn btn-sm btn-outline-success mt-2">Update</button>
+                                <button type="submit" class="btn btn-sm btn-outline-success mt-2">Update</button>
                             </form>
 
                             <!-- Modal Trigger -->
