Render checkout template with test content

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -86,7 +86,7 @@
             <div class="row mb-3">
                 <div class="col text-end">
                     <a href="{% url 'products' %}" class="btn btn-outline-dark">Keep Shopping</a>
-                    <a href="#" class="btn bg-red btn-outline-dark border-0 text-white">Checkout</a>
+                    <a href="{% url 'checkout' %}" class="btn bg-red btn-outline-dark border-0 text-white">Checkout</a>
                 </div>
             </div>
 
